# pyfim

./: .gitignore  main.py  pyproject.toml  tasks.py
pyfim/: cli.py  config.yaml
pyfim/handlers/: datetime_handler.py  dir_handler.py  file_handler.py
