[project]
name = "python-file-information-mover"
version = "0.1.0"
description = ""
authors = [
    {name = "Vark"}
]
requires-python = ">=3.14"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "invoke (>=3.0.3,<4.0.0)"
]

[project.scripts]
pyfim = "pyfim.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
